[workspace]
resolver = "3"
members = [
    "documentation",
    "errors",
    "idiomatic",
    "iterators",
    "logging",
    "multithreading",
    "rusty-engine-tutorial",
    "testing",
    "trait",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.87"
publish = false
authors = ["Shubhendu Anupam Dutta <shubhenduanupam@gmail.com>"]
repository = "https://github.com/shubhenduanupamdutta/UltimateRust2-Intermediate"
license = "MIT"

[workspace.lints.rust]
nonstandard_style = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
# rust_2018_idioms = {level="deny", priority = -1}
rust_2021_compatibility = { level = "deny", priority = -1 }
# missing_copy_implementation = "deny"
unsafe_code = "deny"
# missing_docs = "deny"
deprecated = "deny"
deprecated_in_future = "deny"
unreachable_code = "deny"
unreachable_patterns = "deny"
unreachable_pub = "deny"
non_ascii_idents = "deny"
missing_debug_implementations = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_qualifications = "warn"
unused_import_braces = "warn"
unused_imports = "warn"

[workspace.lints.clippy]
all = "deny"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
incremental = true
opt-level = 3
strip = true
rpath = false
debug = false
debug-assertions = false
overflow-checks = false

[workspace.dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
criterion = { version = "0.7.0", features = ["html_reports"] }
log = "0.4.27"
env_logger = "0.11.8"
crossbeam = "0.8.4"
