[package]
name = "logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
env_logger = {workspace = true}
log = {workspace = true}

[lints]
workspace = true
