[package]
name = "testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "bench_sploosh"
harness = false


[lints]
workspace = true
